<resources>
    <string name="app_name">Sayara DZ</string>
    <string name="title_home">Home</string>
    <string name="title_garage">Garage</string>
    <string name="title_ads">Ads</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Inbox</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_info">Informations Générales</string>
    <string name="loading_data_error">Ouups!, Try again!</string>
    <string name="post_ad_manufacturer">Indiquez la marque du véhicule</string>
    <string name="post_ad_model">Indiquez le modèle du véhicule</string>
    <string name="post_ad_version">Indiquez la version du véhicule</string>
    <string name="post_ad_extra_info">Donnez plus de détails concernant le véhicule</string>
    <string name="post_ad_photos">Ajoutez des photos à votre annonce</string>
    <string name="post_ad_description">Décrivez au mieux votre annonce</string>
    <string name="post_ad_address">Décrivez au mieux votre annonce</string>
    <string name="post_ad_price">Donner le prix estimé du véhicule</string>
    <string name="post_ad_finish">Votre annonce est mise en ligne avec succès!</string>
    <string name="post_ad_offer">Proposez une offre !\n seuil minimal: </string>

</resources>
