<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/garageFragment"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/title_garage"/>

    <item
            android:id="@+id/adsFragment"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/title_ads"/>
    <item
            android:id="@+id/inboxFragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>
    <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_profile"/>


</menu>
