<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_garage"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/title_garage"/>

    <item
            android:id="@+id/navigation_ads"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/title_ads"/>
    <item
            android:id="@+id/navigation_transactions"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/title_transactions"/>
    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>


</menu>
